fixed contact scrolling on Mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,7 +282,6 @@ Media query sm, xs
   .input-element,
   .input-message {
     width: 100%;
-    margin-right: 25px;
   }
 
   footer {
